--- a/public/styles.css
+++ b/public/styles.css
@@ -189,124 +189,15 @@ footer div.social-logo {
     }
 }
 
-/* index page css */
-
-header {
-    width: 100%;
-    position: absolute;
-    z-index: 1;
-    color: white;
-}
-
-header .fa-bars {
-    color: white;
-}
-
-.services div.profile-img-circle {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    width: 50px;
-    height: 50px;
-}
-
-.services .center {
-    border-left: 1px solid lightgray;
-    border-right: 1px solid lightgray;
-}
-
-section#carousel-hold {
-    background: rgb(2, 76, 135);
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
-    overflow-x: hidden;
-}
-
-.carousel.slide {
-    border-radius: 20px;
-    overflow: hidden;
-}
-
-.carousel-item>.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.carousel-item .card .card-img {
-    height: 50%;
-    overflow: hidden;
-}
-
-.carousel-item .card .card-body {
-    height: 45%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.carousel-item>.card {
-    height: 70vh;
-}
-
-#carousel-1,
-#carousel-3 {
-    transform: scale(0.9);
-}
-
-@media (max-width: 575.98px) {
-    .services .col-11 {
-        box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.25);
-    }
-
-    .carousel-item>.card {
-        min-height: 70vh;
-        height: fit-content;
-    }
-
-    #countries div.btn {
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-}
-
-@media (min-width: 576px) {
-    .services .container>.d-flex {
-        box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.25);
-    }
-}
-
-@media (min-width: 992px) {
-    .services {
-        position: absolute;
-        width: 100%;
-        top: 40%;
-    }
-
-    .carousel-item>.card {
-        height: 70vh;
-    }
-}
-
-@media (max-width: 1199.98px) {
-    #carousel-large {
-        display: none;
-    }
-}
-
-@media (min-width: 1200px) {
-    #carousel-hold {
-        display: none;
-    }
-}
 
 
-/* services page css */
+/* services css file */
 
 header {
     width: 100%;
     z-index: 1;
     color: white;
-    background: #2C70C0;
+    /* background: #2C70C0; */
 }
 
 .service-main {
